--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -1,5 +1,6 @@
 {
   "addTopBarIcon": "Add a top bar icon by plugin",
+  "byeMenu": "Bye, Menu!",
   "helloPlugin": "Hello, Plugin!",
   "byePlugin": "Bye, Plugin!"
 }
