:art: https://github.com/siyuan-note/siyuan/issues/5066 config

--- a/src/i18n/zh_CN.json
+++ b/src/i18n/zh_CN.json
@@ -1,5 +1,7 @@
 {
   "addTopBarIcon": "使用插件添加一个顶栏按钮",
+  "cancel": "取消",
+  "save": "保存",
   "byeMenu": "再见，菜单！",
   "helloPlugin": "你好，插件！",
   "byePlugin": "再见，插件！"
