--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -1,5 +1,7 @@
 {
   "addTopBarIcon": "Add a top bar icon by plugin",
+  "cancel": "Cancel",
+  "save": "Save",
   "byeMenu": "Bye, Menu!",
   "helloPlugin": "Hello, Plugin!",
   "byePlugin": "Bye, Plugin!"
