--- a/src/i18n/zh_CN.json
+++ b/src/i18n/zh_CN.json
@@ -3,6 +3,6 @@
   "cancel": "取消",
   "save": "保存",
   "byeMenu": "再见，菜单！",
-  "helloPlugin": "你好，插件！",
+  "helloPlugin": "你好，闪卡插件！",
   "byePlugin": "再见，插件！"
 }
