--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -1,5 +1,5 @@
 {
-  "addTopBarIcon": "Add a top bar icon by plugin",
+  "addTopBarIcon": "Open Flashcard Menu",
   "cancel": "Cancel",
   "save": "Save",
   "byeMenu": "Bye, Menu!",
