使用官方的快捷方式

--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -4,5 +4,8 @@
   "save": "Save",
   "byeMenu": "Bye, Menu!",
   "helloPlugin": "Hello, Plugin!",
-  "byePlugin": "Bye, Plugin!"
+  "byePlugin": "Bye, Plugin!",
+  "extract": "extract",
+  "hollowedOut": "hollowed Out",
+  "problem": "problem"
 }
